# esp32-c3-rust-example

./: .gdbinit  .gitignore  Cargo.toml  README.md  cfg.toml.example
.cargo/: config.toml
application/: Cargo.toml
application/src/: lib.rs
doc/: gdb.md
m5stamp-c3-bsc/: Cargo.toml
m5stamp-c3-bsc/src/: lib.rs
m5stamp-c3-example/: Cargo.toml
m5stamp-c3-example/src/: main.rs
m5stamp-c3-pal/: Cargo.toml
m5stamp-c3-pal/src/: lib.rs  rbg_led.rs  system_time.rs  wifi.rs
m5stamp-c3-pal/src/rbg_led/: ws2812.rs
pal/: Cargo.toml
pal/src/: lib.rs
src/: config.rs  esp_wifi.rs  lib.rs  main.rs  platform.rs
src/application/: mod.rs
src/drivers/: mod.rs  rgb_led.rs  wifi.rs
