[package]
name = "m5stamp-c3-example"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = { version="0.42", features = ["experimental", "alloc"] }
m5stamp-c3-bsc = { path = "../m5stamp-c3-bsc" }
log = "0.4"
anyhow = "1"
toml-cfg = "0.1"

[build-dependencies]
embuild = "0.30"
anyhow = "1"
