[package]
name = "m5stamp-c3-example"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1"
application = { path = "../application" }
esp-idf-svc = { version="0.42", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.31", features = ["binstart"] }
log = "0.4"
m5stamp-c3-pal = { path = "../m5stamp-c3-pal" }
pal = { path = "../pal" }
toml-cfg = "0.1"

[build-dependencies]
anyhow = "1"
embuild = "0.30"
