[package]
name = "m5stamp-c3-pal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
embedded-svc = "0.24"
esp-idf-svc = { version= "0.45", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.32" }
esp-idf-hal = { version = "0.40" }
log = "0.4"
pal = { path = "../pal" }
